hphp/hack/test/typecheck/lambda/lambda_contextual/lambda_bad_as_cond_result.php.like_types.exp
File "lambda_bad_as_cond_result.php", line 29, characters 9-91:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "lambda_bad_as_cond_result.php", line 35, characters 9-100:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "lambda_bad_as_cond_result.php", line 11, characters 61-68:
Invalid assignment (Typing[4110])
File "lambda_bad_as_cond_result.php", line 11, characters 39-59:
Expected (function(T): string)
File "lambda_bad_as_cond_result.php", line 11, characters 39-59:
But got dynamic because it is an unenforceable type
File "lambda_bad_as_cond_result.php", line 18, characters 67-74:
Invalid assignment (Typing[4110])
File "lambda_bad_as_cond_result.php", line 18, characters 39-65:
Expected (function(MyClass): string)
File "lambda_bad_as_cond_result.php", line 18, characters 39-65:
But got dynamic because it is an unenforceable type
